third_party/move/move-compiler-v2/tests/uninit-use-checker/assign_wrong_if_branch_no_else_unfoldable.move
script {
fun main(p: bool) {
    let x: u64;
    if (p) x = 100;
    assert!(x == 100, 42);
}
}

// check: COPYLOC_UNAVAILABLE_ERROR
